--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        const API_KEY = 'AIzaSyCMZgbip1b3hky8njdklmeDBaFgyJo3KIw';
+        cconst API_KEY = process.env.YOUTUBE_API_KEY; // Masked key;
         let videos = [];
         let totalDuration = 0;
 
