--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        cconst API_KEY = process.env.YOUTUBE_API_KEY; // Masked key;
+        const API_KEY = process.env.YOUTUBE_API_KEY; // Masked key;
         let videos = [];
         let totalDuration = 0;
 
